# semantic-search

./: CHANGELOG.md  README.md  pyproject.toml
docs/: cli-usage.md  examples.md  installation.md  python-api.md
src/codesense/: __init__.py  api.py  cli.py
src/codesense/config/: __init__.py  settings.py
src/codesense/parsers/: __init__.py  base_parser.py  python_parsers.py
src/codesense/tools/: __init__.py  indexer.py  searcher.py
src/codesense/util/: __init__.py  embeddings.py  storage.py
src/semantic_search/: __init__.py  cli.py  indexer.py  searcher.py
src/semantic_search/parsers/: __init__.py  base_parser.py  python_parser.py
